# Rust-opengl-renderer

./: Cargo.toml  README.md  build.rs
assets/models/cube/: cube.glb
assets/shaders/: shader.frag  shader.vert  skybox.vert
gl/: Cargo.toml  build.rs
gl/src/: lib.rs
src/: camera.rs  cube.rs  cube_map.rs  lib.rs  main.rs  model.rs  program.rs  resources.rs  shader.rs  skybox.rs  texture.rs  uniform.rs  uniform_buffer_object.rs  vertex.rs
src/camera/: camera_controller.rs  mod.rs  utils.rs
src/material/: mod.rs
src/mesh/: mod.rs  vertex.rs
src/mesh/primitives/: cube.rs
src/shader/: mod.rs  program.rs  shader.rs
src/shaders/: shader.frag  shader.vert
